Prevents Selects to have a width larger than a constant to avoid breaking layout when a metadata has a too large name; Reduces and align icons in actions container from tables.

--- a/src/admin/scss/_selects.scss
+++ b/src/admin/scss/_selects.scss
@@ -1,6 +1,8 @@
 .select {
+    max-width: 170px;
     padding-top: 0px !important;
     select {
+        width: 100%;
         border: none;
         border-radius: 1px !important;
         font-weight: normal;
